compiler/src/test/resources/golden/errors/sam_no_overload.dawn
use java "java.lang.Math"

pub fn main() -> Unit !io = {
  let n = Math.abs(fn(x: Int) => x)
  println(to_string(n))
}
