compiler/src/test/resources/golden/errors/sam_no_overload.err
error: no overload of `Math.abs` matches (fn(Int) -> Int)
  --> sam_no_overload.dawn:4:11
  |
4 |   let n = Math.abs(fn(x: Int) => x)
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^
  = hint: candidates:
  public static double java.lang.Math.abs(double)
  public static float java.lang.Math.abs(float)
  public static long java.lang.Math.abs(long)
  public static int java.lang.Math.abs(int)
error: cannot infer type parameter(s) T for `to_string`
  --> sam_no_overload.dawn:5:11
  |
5 |   println(to_string(n))
  |           ^^^^^^^^^^^^
  = hint: add a type annotation at the use site
